--- a/package.json
+++ b/package.json
@@ -1,16 +1,37 @@
 {
-  "name": "hibp-slackbot",
-  "version": "1.0.0",
-  "description": "A bot that alerts members of your Slack if their data has been exposed in breaches of online services.",
-  "main": "index.js",
+  "name": "botkit-starter-slack",
+  "version": "0.0.2",
+  "description": "A starter kit for building a custom Slack bot with Botkit Studio",
+  "main": "bot.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node bot.js"
   },
-  "repository": "https://github.com/bencooper222/hibp-slackbot.git",
-  "author": "Benjamin Cooper, Evan Sun & Brendan Batliner (2017)",
-  "license": "MIT",
-  "private": false,
   "dependencies": {
-    "express": "^4.16.2"
-  }
+    "body-parser": "^1.15.2",
+    "botkit": "^0.6",
+    "botkit-storage-mongo": "^1.0.6",
+    "dashbot": "0.7.4",
+    "debug": "^2.3.3",
+    "express": "^4.14.0",
+    "node-env-file": "^0.1.8",
+    "querystring": "^0.2.0",
+    "request": "^2.83.0",
+    "wordfilter": "^0.2.6"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/howdyai/botkit-starter-slack.git"
+  },
+  "bugs": {
+    "url": "https://github.com/howdyai/botkit-starter-slack/issues"
+  },
+  "homepage": "https://github.com/howdyai/botkit-starter-slack",
+  "keywords": [
+    "bots",
+    "chatbots",
+    "slack"
+  ],
+  "author": "ben@howdy.ai",
+  "license": "ISC"
 }
