--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "node-env-file": "^0.1.8",
     "querystring": "^0.2.0",
     "request": "^2.83.0",
-    "wordfilter": "^0.2.6"
+    "wordfilter": "^0.2.6",
+    "slackify-html": "^1.0.1"
   },
   "devDependencies": {},
   "repository": {
